--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
       "test": "echo \"Error: no test specified\" && exit 1"
    },
    "keywords": [],
-   "author": "",
+   "author": "Ashwin Jadhav",
+   "bin": "./index.js",
    "license": "ISC",
    "dependencies": {
       "chalk": "^5.0.1",
